fix filter select box z-index

--- a/packages/components/PlayersTable/src/players-filters.scss
+++ b/packages/components/PlayersTable/src/players-filters.scss
@@ -3,6 +3,13 @@
 .players-filters {
   &__filters {
     display: flex;
+    position: relative;
+    z-index: 2;
+  }
+
+  &__content {
+    position: relative;
+    z-index: 1;
   }
 
   &__group {
